# AoC-2025

./: .gitignore  .hindent.yaml  README.md  aoc2025.cabal  aocxxxx.cabal  runSolutions.sh  settings.json
day01/: Dial.hs  DialRotation.hs  Main.hs
day02/: IdRange.hs  Main.hs
day03/: BatteryBank.hs  Main.hs
day04/: Main.hs  PaperRollMap.hs
day05/: IngredientRange.hs  Main.hs
day06/: Main.hs  Problem.hs
day07/: Main.hs  Manifold.hs
day08/: Components.hs  Coordinate3D.hs  Edge.hs  Main.hs
day09/: Edge.hs  Interval.hs  Main.hs  Polygon.hs  Rectangle.hs
day10/: Indicator.hs  Joltages.hs  Lights.hs  Machine.hs  Machine2.hs  Main.hs  Vector.hs
day10/LinAlg/: Constraint.hs  Equation.hs  Expression.hs  Generics.hs  RowVector.hs  Solve.hs  Vector.hs
day11/: Graph.hs  Main.hs
day12/: Main.hs  Puzzle.hs
template/: cabal
template/dayxx/: Main.hs
utils/: Cached.hs  Coordinate.hs  Direction.hs  Grid.hs  LocatedChar.hs  Parsers.hs  ProcessFile.hs
