cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
author:             Jetze Zoethout
build-type:         Simple

common common
    ghc-options: -Wall -O1
    default-extensions:   RecordWildCards
                        , TypeApplications
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , InstanceSigs
                        , MonadComprehensions
    build-depends:    base ^>=4.18.3.0
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , clock
    default-language: Haskell2010

library utils
    import:           common
    exposed-modules:  Coordinate
                    , Direction
                    , Grid
                    , Parsers
                    , ProcessFile
                    , LocatedChar
    hs-source-dirs:   utils
