cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
author:             Jetze Zoethout
build-type:         Simple

common common
    ghc-options: -Wall -O1
    default-extensions:   RecordWildCards
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , MonadComprehensions
    build-depends:    base ^>=4.18.3.0
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , clock
    default-language: GHC2021

library utils
    import:           common
    exposed-modules:  Coordinate
                    , Direction
                    , Grid
                    , Parsers
                    , ProcessFile
                    , LocatedChar
    hs-source-dirs:   utils

executable day02
    import:           common
    main-is:          Main.hs
    other-modules:    IdRange
    build-depends:    utils
    hs-source-dirs:   day02

executable day01
    import:           common
    main-is:          Main.hs
    other-modules:    Dial
                    , DialRotation
    build-depends:    utils
    hs-source-dirs:   day01
