cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
author:             Jetze Zoethout
build-type:         Simple

common common
    ghc-options: -Wall -O1
    default-extensions:   RecordWildCards
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , MonadComprehensions
    build-depends:    base ^>=4.18.3.0
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , clock
    default-language: GHC2021

library utils
    import:           common
    exposed-modules:  Coordinate
                    , Direction
                    , Grid
                    , Parsers
                    , ProcessFile
                    , LocatedChar
                    , Cached
    hs-source-dirs:   utils

executable day10
    import:           common
    main-is:          Main.hs
    other-modules:    Lights
                    , Machine
                    , Machine2
    build-depends:    utils
                    , sbv
    hs-source-dirs:   day10

executable day09
    import:           common
    main-is:          Main.hs
    other-modules:    Rectangle
                    , Edge
                    , Interval
    build-depends:    utils
    hs-source-dirs:   day09

executable day08
    import:           common
    main-is:          Main.hs
    other-modules:    Coordinate3D
                    , Edge
                    , Components
    build-depends:    utils
    hs-source-dirs:   day08

executable day07
    import:           common
    main-is:          Main.hs
    other-modules:    Manifold
    build-depends:    utils
    hs-source-dirs:   day07

executable day06
    import:           common
    main-is:          Main.hs
    other-modules:    Problem
    build-depends:    utils
    hs-source-dirs:   day06

executable day05
    import:           common
    main-is:          Main.hs
    other-modules:    IngredientRange
    build-depends:    utils
    hs-source-dirs:   day05

executable day04
    import:           common
    main-is:          Main.hs
    other-modules:    PaperRollMap
    build-depends:    utils
    hs-source-dirs:   day04

executable day03
    import:           common
    main-is:          Main.hs
    other-modules:    BatteryBank
    build-depends:    utils
    hs-source-dirs:   day03

executable day02
    import:           common
    main-is:          Main.hs
    other-modules:    IdRange
    build-depends:    utils
    hs-source-dirs:   day02

executable day01
    import:           common
    main-is:          Main.hs
    other-modules:    Dial
                    , DialRotation
    build-depends:    utils
    hs-source-dirs:   day01
