cabal-version:      3.0
name:               aocxxxx
version:            0.1.0.0
author:             Jetze Zoethout
build-type:         Simple

common common
    ghc-options: -Wall -O1
    default-extensions:   RecordWildCards
                        , TypeApplications
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , InstanceSigs
                        , MonadComprehensions
    build-depends:    base ^>=4.17.2.1
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , clock
    default-language: Haskell2010

library utils
    import:           common
    exposed-modules:  Coordinate
                    , Direction
                    , Grid
                    , Parsers
                    , ProcessFile
                    , LocatedChar
    hs-source-dirs:   utils
